# operational-data-warehouse-etl-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: pipeline.yaml
data/raw/customers/: customers.xlsx
data/raw/products/: products.json
data/raw/transactions/: transactions.csv
data/rejected/: sample_transactions_rejected.csv
reports/: README.md
src/odw_etl/: __init__.py  cli.py  config.py  db.py  extractors.py  logging_utils.py  pipeline.py  schema.py  transformers.py  utils.py  validators.py
src/odw_etl/api/: __init__.py  mock_api.py
tests/: test_pipeline_integration.py  test_validators.py
